[project]
name = "leap"
version = "0.1.0"
description = "San Francisco gym accessibility analysis - LEAP interview case"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-snowflake>=1.11.1",
    "streamlit>=1.53.0",
    "streamlit-folium>=0.26.1",
    "folium>=0.20.0",
    "snowflake-connector-python>=3.0.0",
    "pandas>=2.0.0",
    "branca>=0.8.2",
]
